--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower Assignment</title>
+    <title>Flower Shop Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <!-- Header section  -->
+        <section class="banner">
+            <div class="banner-title">
+
+                Let's make <br> beautiful flowers a <br>part of your life.
+
+                <p class="banner-title-subtext">
+                    It is a long established fact that a reader will be distracted by the readable <br> content of a
+                    page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less
+                    normal distribution of letters.
+                </p>
+                <button class="button">Shop Now</button>
+            </div>
+            <img src="/Flower Asset/pngwing 10.png" alt="Banner Flower">
+
+            </div>
+        </section>
+        <!-- Featured Flowers -->
+        <section class="featured-flowers">
+            <h3>Our Featured Flowers</h3>
+            <p class="featured-paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <div class="featured-image">
+                <img id="PinkFlower1" src="/Flower Asset/pngwing 6.png" alt="">
+                <img id="PinkFlower2" src="/Flower Asset/pngwing 5.png" alt="">
+                <img id="" src="/Flower Asset/pngwing 7.png" alt="">
+            </div>
+        </section>
+    </header>
 </body>
+
 </html>
