--- a/index.html
+++ b/index.html
@@ -33,11 +33,20 @@
         <!-- Featured Flowers -->
         <section class="featured-flowers">
             <h3>Our Featured Flowers</h3>
-            <p class="featured-paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <div class="featured-image">
-                <img id="PinkFlower1" src="/Flower Asset/pngwing 6.png" alt="">
-                <img id="PinkFlower2" src="/Flower Asset/pngwing 5.png" alt="">
-                <img id="" src="/Flower Asset/pngwing 7.png" alt="">
+            <p class="featured-paragraph">It is a long established fact that a reader will be distracted by the readable
+                <br>content of a page when looking at its layout.</p>
+            <div id="PinkFlower1" class="featured-image">
+                <img src="/Flower Asset/pngwing 6.png" alt="">
+                <span class="flower">Pink Flower Tree</span>
+            </div>
+            <div id="PinkFlower2"  class="featured-image">
+                <img src="/Flower Asset/pngwing 5.png" alt="">
+                <span class="flower">Pink Flower Tree</span>
+            </div>
+            <div id="PinkFlower3" class="featured-image">
+                <img src="/Flower Asset/pngwing 7.png" alt="">
+                <span class="flower"> Pink Flower Tree</span>
+            </div>
             </div>
         </section>
     </header>
