--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,37 +19,96 @@
 
                 Let's make <br> beautiful flowers a <br>part of your life.
 
-                <p class="banner-title-subtext">
+                <p id="banner-title-subtext">
                     It is a long established fact that a reader will be distracted by the readable <br> content of a
                     page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less
                     normal distribution of letters.
                 </p>
-                <button class="button">Shop Now</button>
+                <button class="Button">Shop Now</button>
             </div>
             <img src="/Flower Asset/pngwing 10.png" alt="Banner Flower">
 
             </div>
         </section>
-        <!-- Featured Flowers -->
-        <section class="featured-flowers">
-            <h3>Our Featured Flowers</h3>
-            <p class="featured-paragraph">It is a long established fact that a reader will be distracted by the readable
-                <br>content of a page when looking at its layout.</p>
-            <div id="PinkFlower1" class="featured-image">
-                <img src="/Flower Asset/pngwing 6.png" alt="">
-                <span class="flower">Pink Flower Tree</span>
-            </div>
-            <div id="PinkFlower2"  class="featured-image">
-                <img src="/Flower Asset/pngwing 5.png" alt="">
-                <span class="flower">Pink Flower Tree</span>
-            </div>
-            <div id="PinkFlower3" class="featured-image">
-                <img src="/Flower Asset/pngwing 7.png" alt="">
-                <span class="flower"> Pink Flower Tree</span>
-            </div>
-            </div>
-        </section>
     </header>
+    <!-- Featured Flowers Section -->
+    <section class="featured-flowers">
+        <h2 class="featured">Our Featured Flowers</h2>
+        <p class="featured-paragraph">It is a long established fact that a reader will be distracted by the readable
+            <br>content of a page when looking at its layout.
+        </p>
+        <div id="PinkFlower1" class="featured-image">
+            <img src="/Flower Asset/pngwing 6.png" alt="">
+            <span class="flower">Pink Flower Tree</span>
+        </div>
+        <div id="PinkFlower2" class="featured-image">
+            <img src="/Flower Asset/pngwing 5.png" alt="">
+            <span class="flower">Pink Flower Tree</span>
+        </div>
+        <div id="PinkFlower3" class="featured-image">
+            <img src="/Flower Asset/pngwing 7.png" alt="">
+            <span class="flower"> Pink Flower Tree</span>
+        </div>
+        </div>
+    </section>
+
+    <!-- Hot Deal Section -->
+    <section class="hot-deal">
+        <div>
+            <h2 class="discount-hot-deal">Hot Deal ! Sale Up To 25% <span class="discount">Off</span></h2>
+            <p class="hot-deal-paragraph">It is a long established fact that a reader will be distracted by the readable
+                <br>content of a page when looking at its layout. <br>
+            </p>
+            <button class="Button2">Sign Up</button>
+        </div>
+
+        <div class="hot-deal-image">
+            <img src="/Flower Asset/pngwing 8.png" alt="">
+        </div>
+
+    </section>
+
+    <!-- Instagram Section -->
+    <section class="instagram">
+        <h2 class="instagram-headline">Instagram</h2>
+        <p class="instagram-text">It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout.</p>
+
+        <div class="instagram-image">
+            <img src="/Flower Asset/Flower 01.png" alt="Flower01" width="240px" height="290"">
+    <img src=" /Flower Asset/Rectangle 4.png" alt="Flower01" width="240px" height="290"">
+    <img src=" /Flower Asset/Rectangle 5.png" alt="Flower01" width="240px" height="290"">
+    <img src=" /Flower Asset/Rectangle 6.png" alt="Flower01" width="240px" height="290"">
+</div>
+</section>
+<!-- Latest Deals section -->
+<section class=" latest-deals">
+            <div class="email" ;>
+                <h2>
+                    Get The Latest Deals
+                </h2>
+                <p class="hot-deals-paragraph">
+                    $30 coupon for first shopping
+                </p>
+                <input class="email-content" type="email" placeholder="Enter your email here.....">
+                <button class="Button3">Subscribe</button>
+            </div>
+
+            <!-- Footer Section -->
+
+            <footer>
+                <div class="para-footer">
+                    <span>Flower</span>Shop
+                    <p class="footer-paragraph">
+                        It is a long established fact that a reader will be distracted by the readable <br>content of a
+                        page
+                        when looking at its layout.
+                    </p>
+                    <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+                </div>
+            </footer>
+
+    </section>
 </body>
 
 </html>
