--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
                 <button class="Button">Shop Now</button>
             </div>
-            <img src="/Flower Asset/pngwing 10.png" alt="Banner Flower">
+            <img src="../Flower Asset/pngwing 10.png" alt="Banner Flower">
 
             </div>
         </section>
@@ -38,15 +38,15 @@
             <br>content of a page when looking at its layout.
         </p>
         <div id="PinkFlower1" class="featured-image">
-            <img src="/Flower Asset/pngwing 6.png" alt="">
+            <img src="../Flower Asset/pngwing 6.png" alt="">
             <span class="flower">Pink Flower Tree</span>
         </div>
         <div id="PinkFlower2" class="featured-image">
-            <img src="/Flower Asset/pngwing 5.png" alt="">
+            <img src="../Flower Asset/pngwing 5.png" alt="">
             <span class="flower">Pink Flower Tree</span>
         </div>
         <div id="PinkFlower3" class="featured-image">
-            <img src="/Flower Asset/pngwing 7.png" alt="">
+            <img src="../Flower Asset/pngwing 7.png" alt="">
             <span class="flower"> Pink Flower Tree</span>
         </div>
         </div>
@@ -75,10 +75,10 @@
             content of a page when looking at its layout.</p>
 
         <div class="instagram-image">
-            <img src="/Flower Asset/Flower 01.png" alt="Flower01" width="240px" height="290"">
-    <img src=" /Flower Asset/Rectangle 4.png" alt="Flower01" width="240px" height="290"">
-    <img src=" /Flower Asset/Rectangle 5.png" alt="Flower01" width="240px" height="290"">
-    <img src=" /Flower Asset/Rectangle 6.png" alt="Flower01" width="240px" height="290"">
+            <img src="../Flower Asset/Flower 01.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ../Flower Asset/Rectangle 4.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ../Flower Asset/Rectangle 5.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ../Flower Asset/Rectangle 6.png" alt="Flower01" width="240px" height="290"">
 </div>
 </section>
 <!-- Latest Deals section -->
