--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
                 <button class="Button">Shop Now</button>
             </div>
-            <img src="../Flower Asset/pngwing 10.png" alt="Banner Flower">
+            <img src="./FlowerAsset/pngwing10.png" alt="Banner Flower">
 
             </div>
         </section>
@@ -38,15 +38,15 @@
             <br>content of a page when looking at its layout.
         </p>
         <div id="PinkFlower1" class="featured-image">
-            <img src="../Flower Asset/pngwing 6.png" alt="">
+            <img src="./FlowerAsset/pngwing6.png" alt="">
             <span class="flower">Pink Flower Tree</span>
         </div>
         <div id="PinkFlower2" class="featured-image">
-            <img src="../Flower Asset/pngwing 5.png" alt="">
+            <img src="./FlowerAsset/pngwing5.png" alt="">
             <span class="flower">Pink Flower Tree</span>
         </div>
         <div id="PinkFlower3" class="featured-image">
-            <img src="../Flower Asset/pngwing 7.png" alt="">
+            <img src="./FlowerAsset/pngwing7.png" alt="">
             <span class="flower"> Pink Flower Tree</span>
         </div>
         </div>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="hot-deal-image">
-            <img src="/Flower Asset/pngwing 8.png" alt="">
+            <img src="./FlowerAsset/pngwing8.png" alt="">
         </div>
 
     </section>
@@ -75,10 +75,10 @@
             content of a page when looking at its layout.</p>
 
         <div class="instagram-image">
-            <img src="../Flower Asset/Flower 01.png" alt="Flower01" width="240px" height="290"">
-    <img src=" ../Flower Asset/Rectangle 4.png" alt="Flower01" width="240px" height="290"">
-    <img src=" ../Flower Asset/Rectangle 5.png" alt="Flower01" width="240px" height="290"">
-    <img src=" ../Flower Asset/Rectangle 6.png" alt="Flower01" width="240px" height="290"">
+            <img src="./FlowerAsset/Flower01.png" alt="Flower01" width="240px" height="290"">
+    <img src="./FlowerAsset/Rectangle4.png" alt="Flower01" width="240px" height="290"">
+    <img src="./FlowerAsset/Rectangle5.png" alt="Flower01" width="240px" height="290"">
+    <img src="./FlowerAsset/Rectangle6.png" alt="Flower01" width="240px" height="290"">
 </div>
 </section>
 <!-- Latest Deals section -->
@@ -93,22 +93,18 @@
                 <input class="email-content" type="email" placeholder="Enter your email here.....">
                 <button class="Button3">Subscribe</button>
             </div>
-
-            <!-- Footer Section -->
-
-            <footer>
-                <div class="para-footer">
-                    <span>Flower</span>Shop
-                    <p class="footer-paragraph">
-                        It is a long established fact that a reader will be distracted by the readable <br>content of a
-                        page
-                        when looking at its layout.
-                    </p>
-                    <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
-                </div>
-            </footer>
-
     </section>
+    <footer>
+        <div class="para-footer">
+            <span>Flower</span>Shop
+            <p class="footer-paragraph">
+                It is a long established fact that a reader will be distracted by the readable <br>content of a
+                page
+                when looking at its layout.
+            </p>
+            <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+    </footer>
 </body>
 
 </html>
