--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
         <div class="instagram-image">
             <img src="./FlowerAsset/Flower01.png" alt="Flower01" width="240px" height="290"">
-    <img src="./FlowerAsset/Rectangle4.png" alt="Flower01" width="240px" height="290"">
-    <img src="./FlowerAsset/Rectangle5.png" alt="Flower01" width="240px" height="290"">
-    <img src="./FlowerAsset/Rectangle6.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ./FlowerAsset/Rectangle4.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ./FlowerAsset/Rectangle5.png" alt="Flower01" width="240px" height="290"">
+    <img src=" ./FlowerAsset/Rectangle6.png" alt="Flower01" width="240px" height="290"">
 </div>
 </section>
 <!-- Latest Deals section -->
@@ -93,6 +93,36 @@
                 <input class="email-content" type="email" placeholder="Enter your email here.....">
                 <button class="Button3">Subscribe</button>
             </div>
+    </section>
+
+    <!-- Market survey section -->
+    <section id="market-survey">
+        <h2 class="survey">Shop Survey</h2>
+        <p class="par-surv">We're always looking for ways to improve our flower shop, and we need your help! Please take a few minutes to
+            complete this market survey.</p>
+        <form>
+            <div class="question">
+                <label>What is your favorite type of flower?</label>
+                <input type="text" />
+            </div>
+            <div class="question">
+                <label>How often do you buy flowers?</label>
+                <select>
+                    <option>Once a month</option>
+                    <option>Once a week</option>
+                    <option>Once a day</option>
+                </select>
+            </div>
+            <div class="question">
+                <label>What is your budget for flowers?</label>
+                <input type="number" />
+            </div>
+            <div class="question">
+                <label>What is your favorite flower shop?</label>
+                <input type="text" />
+            </div>
+            <button class="submit" type="submit">Submit</button>
+        </form>
     </section>
     <footer>
         <div class="para-footer">
